--- a/app/src/main/res/layout/activity_add_exam.xml
+++ b/app/src/main/res/layout/activity_add_exam.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:hint="Subject"
+                    android:hint="@string/subject_txt"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textStyle="bold" />
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:gravity="top"
-                    android:hint="Date / Room"
+                    android:hint="@string/desc_txt"
                     android:minHeight="100dp"
                     android:padding="10dp" />
             </LinearLayout>
@@ -55,7 +55,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:onClick="addFunc"
-            android:text="Add" />
+            android:text="@string/addBtn" />
 
     </LinearLayout>
 
